--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
     "react": "^15.4.0",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "standard": "^8.5.0"
   },
   "peerDependencies": {
     "react-router": "^3.0.0"
