--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "standard": "^8.5.0"
   },
   "peerDependencies": {
-    "react-router": "^3.0.0"
+    "react-router": "^2.0.0 || ^3.0.0"
   },
   "ava": {
     "require": [
